# claude-code

./: .claudeignore  .claudelint.yaml  .clauderules  .dockerignore  .editorconfig  .env  .env.docker  .env.example  .env.shared.example  .envrc  .eslintrc.js  .eslintrc.json  .gitignore  .mcp.json  .netlifyignore  .pre-commit-config.yaml  .yamllint  ACTION-ITEMS.md  AGENTS.md  AGENT_PROMPT.md  ANALYSIS.md  ANT_ONLY_METADATA_USER_ID_SPEC.md  API_CLIENT_README.md  ARCHITECTURE.md  ASTEROIDS_README.md  AUTHENTICATION_ANALYSIS.md  Anderson Enside  BMAD-CALIBRATION-PROMPT.md  BRANCH_AUDIT_REPORT.md  BRANCH_SUMMARY.md  BREWLAB_CONCEPT.md  BUG_COMPOUND_COMMAND_PERMISSIONS.md  CHANGELOG.md  CHECKLIST_IMPLANTACAO.txt  CI-CD_WORKFLOW.md  CLAUDE.md  CLAUDE_AI_3_ANALYSIS.md  CLAUDE_MYTHOS.md  CLEANUP-LIST.md  CODEBASE_DOCUMENTATION.md  (+223 more)
.claude/: AGENTS-MCP-POLICY.md  AI-APIS-BEST-PRACTICES.md  CLAUDE.md  INTEROP-CODEX-GEMINI.md  ORG-GOVERNANCE.md  PROJECT-SETUP.md  README.md  SETUP-REPORT.md  SKILLS-GENERATOR.md  bash-permission-bug-analysis.md  codex_config.json  hookify.block-traversal-file-path.local.md  hooks.json  (+13 more)
.claude-plugin/: marketplace.json
claude-code-rust/: .gitignore  COMPLETE_STATUS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md
claude-code-rust/crates/claude-agents/: Cargo.toml
claude-code-rust/crates/claude-agents/src/: agent.rs  context.rs  lib.rs  orchestrator.rs
claude-code-rust/crates/claude-api/: Cargo.toml
claude-code-rust/crates/claude-api/src/: client.rs  lib.rs  models.rs  retry.rs  streaming.rs
claude-code-rust/crates/claude-cli/: Cargo.toml  IMPLEMENTATION.md  README.md
claude-code-rust/crates/claude-cli/src/: app.rs  auth.rs  cli.rs  conversation.rs  main.rs  mcp_server.rs  repl.rs
claude-code-rust/crates/claude-cli/tests/: integration_tests.rs
claude-code-rust/crates/claude-config/: Cargo.toml
claude-code-rust/crates/claude-config/src/: config.rs  env.rs  lib.rs  mcp.rs  paths.rs
claude-code-rust/crates/claude-core/: Cargo.toml  README.md
claude-code-rust/crates/claude-core/examples/: basic_usage.rs
claude-code-rust/crates/claude-core/src/: error.rs  lib.rs  tool.rs  types.rs
claude-code-rust/crates/claude-hooks/: Cargo.toml  HOOK_FLOW.md  IMPLEMENTATION.md
claude-code-rust/crates/claude-hooks/src/: discovery.rs  executor.rs  hook.rs  lib.rs  protocol.rs
claude-code-rust/crates/claude-mcp/: Cargo.toml
claude-code-rust/crates/claude-mcp/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs
claude-code-rust/crates/claude-plugins/: Cargo.toml
claude-code-rust/crates/claude-plugins/src/: agent.rs  command.rs  discovery.rs  frontmatter.rs  lib.rs  metadata.rs
claude-code-rust/crates/claude-session/: Cargo.toml
claude-code-rust/crates/claude-session/src/: background_shells.rs  lib.rs  session.rs  state_file.rs
claude-code-rust/crates/claude-tools/: BUILT_IN_TOOLS.md  Cargo.toml  IMPLEMENTATION.md
claude-code-rust/crates/claude-tools/examples/: basic_usage.rs  built_in_tools_demo.rs
claude-code-rust/crates/claude-tools/src/: bash.rs  echo.rs  executor.rs  file_ops.rs  lib.rs  ls.rs  permission.rs  search.rs
rust/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  PR_DESCRIPTION.md  README.md  rustfmt.toml
rust/.config/: nextest.toml
rust/crates/claude-aliases/: Cargo.toml
rust/crates/claude-aliases/src/: lib.rs
rust/crates/claude-api/: Cargo.toml
rust/crates/claude-api/src/: client.rs  lib.rs  streaming.rs
rust/crates/claude-cli/: Cargo.toml
rust/crates/claude-cli/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs
rust/crates/claude-cloud/: Cargo.toml
rust/crates/claude-cloud/src/: lib.rs
rust/crates/claude-config/: Cargo.toml
rust/crates/claude-config/src/: lib.rs
rust/crates/claude-core/: Cargo.toml
rust/crates/claude-core/src/: agent.rs  error.rs  ids.rs  lib.rs  message.rs  permission.rs  schema.rs  session.rs  tool.rs  usage.rs
rust/crates/claude-engine/: Cargo.toml
rust/crates/claude-engine/src/: context.rs  engine.rs  events.rs  hooks.rs  lib.rs  state.rs  streaming.rs  tool_orchestrator.rs
rust/crates/claude-ffi/: Cargo.toml
rust/crates/claude-ffi/src/: lib.rs
rust/crates/claude-fs/: Cargo.toml
rust/crates/claude-fs/src/: cache.rs  index.rs  lib.rs  operations.rs
rust/crates/claude-git/: Cargo.toml
rust/crates/claude-git/src/: conflicts.rs  graph.rs  interactive.rs  lib.rs
rust/crates/claude-github/: Cargo.toml
rust/crates/claude-github/src/: lib.rs
rust/crates/claude-ide/: Cargo.toml
rust/crates/claude-ide/src/: lib.rs
rust/crates/claude-lsp/: Cargo.toml
rust/crates/claude-lsp/src/: lib.rs
rust/crates/claude-mcp/: Cargo.toml
rust/crates/claude-mcp/src/: lib.rs
rust/crates/claude-permissions/: Cargo.toml
rust/crates/claude-permissions/src/: lib.rs
rust/crates/claude-plugins/: Cargo.toml
rust/crates/claude-plugins/src/: agents.rs  claude_md.rs  commands.rs  lib.rs  sandbox.rs  settings.rs  styles.rs  tools.rs
rust/crates/claude-sandbox/: Cargo.toml
rust/crates/claude-sandbox/src/: lib.rs
rust/crates/claude-settings/: Cargo.toml
rust/crates/claude-settings/src/: lib.rs
rust/crates/claude-telemetry/: Cargo.toml
rust/crates/claude-telemetry/src/: lib.rs
rust/crates/claude-tests/: Cargo.toml
rust/crates/claude-tests/benches/: performance.rs
rust/crates/claude-tests/tests/: integration_tests.rs
rust/crates/claude-themes/: Cargo.toml
rust/crates/claude-themes/src/: lib.rs
rust/crates/claude-tools/: Cargo.toml
rust/crates/claude-tools/src/: bash.rs  file.rs  git.rs  github.rs  glob.rs  grep.rs  lib.rs  list.rs  ls.rs  lsp.rs  mcp.rs  pty.rs
rust/crates/claude-tools/src/file_ops/: advanced.rs  browser.rs  mod.rs
rust/crates/claude-tui/: Cargo.toml
rust/crates/claude-tui/src/: app.rs  events.rs  input.rs  layout.rs  lib.rs  rendering.rs  state.rs  theme.rs  widgets.rs
rust/crates/claude-tui/src/components/: message.rs  mod.rs  spinner.rs  tool_card.rs
rust/crates/claude-updater/: Cargo.toml
rust/crates/claude-updater/src/: lib.rs
rust/tests/: integration_tests.rs
(+3435 files in other folders)
