[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethos-aegis-agentic-immune-veriflow"
version = "1.0.0"
description = "Ethos Aegis — Agentic Immune System with Veriflow and Claude Mythos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ethos_aegis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 127
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
