[workspace]
name = "claude-code-rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

members = [
    "crates/claude-core",
    "crates/claude-engine",
    "crates/claude-api",
    "crates/claude-tools",
    "crates/claude-fs",
    "crates/claude-permissions",
    "crates/claude-sandbox",
    "crates/claude-ffi",
    "crates/claude-cli",
    "crates/claude-tui",
    "crates/claude-lsp",
    "crates/claude-git",
    "crates/claude-github",
    "crates/claude-aliases",
    "crates/claude-mcp",
    "crates/claude-config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anthropic <support@anthropic.com>"]
license = "MIT"
repository = "https://github.com/anthropics/claude-code"
rust-version = "1.80"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.44", features = ["full", "rt-multi-thread", "macros", "process", "sync", "time"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP/Networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
http = "1.0"

# CLI & TUI
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ansi-to-tui = "7.0"
textwrap = "0.16"
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Git & GitHub
git2 = "0.20"
octocrab = "0.44"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# Data structures
dashmap = "6.1"
indexmap = "2.8"

# File system
ignore = "0.4"
walkdir = "2.5"
fast-glob = "0.4"

# Caching & Performance
memoize = "0.4"
cached = "0.55"

# Utilities
regex = "1.11"
once_cell = "1.21"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6.0"
shell-escape = "0.1"
which = "7.0"
tempfile = "3.19"

# MCP (Model Context Protocol)
jsonrpc-core = "18.0"

# Testing
mockall = "0.13"

# FFI
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

