[package]
name = "claude-cli"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
description = "Main CLI application for Claude Code"
license = "MIT"

[[bin]]
name = "claude-cli"
path = "src/main.rs"

[dependencies]
# Internal crates
claude-core = { path = "../claude-core" }
claude-api = { path = "../claude-api" }
claude-config = { path = "../claude-config" }
claude-tools = { path = "../claude-tools" }
claude-plugins = { path = "../claude-plugins" }
claude-hooks = { path = "../claude-hooks" }
claude-agents = { path = "../claude-agents" }
claude-mcp = { path = "../claude-mcp" }
claude-session = { path = "../claude-session" }

# External dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rustyline = "14.0"
dirs = "5.0"
futures = "0.3"
