[package]
name = "claude-core"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
description = "Core types, traits, and error handling for Claude Code"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
