[package]
name = "claude-plugins"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
description = "Plugin system for loading and parsing markdown-based plugins"
license = "MIT"

[dependencies]
claude-core = { path = "../claude-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pulldown-cmark = "0.9"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
