[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic"]
description = "Tool execution framework for Claude Code"
license = "MIT"

[dependencies]
claude-core = { path = "../claude-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
walkdir = "2.5"
globset = "0.4"
regex = "1.10"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
tempfile = "3.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
