[package]
name = "claude-api"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

