[package]
name = "claude-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GitHub API client for repository operations, PRs, and issues"

[dependencies]
claude-core = { path = "../claude-core" }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"

