[package]
name = "claude-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model Context Protocol (MCP) client for external tool servers"

[dependencies]
claude-core = { path = "../claude-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# URL parsing
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

